tests/negative/test_eval_load_compiled.orb
sym x:i32;

eval (mac foo () {
    ret ,x;
});

fnc main () () {
    foo;
};